--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
                                     <projectName>cucumber-jvm-example</projectName>
                                     <outputDirectory>${project.build.directory}/cucumber-html-reports</outputDirectory>
                                     <cucumberOutput>${project.build.directory}/cucumber.json</cucumberOutput>
-                                    <enableFlashCharts>false</enableFlashCharts>
+                                    <enableFlashCharts>true</enableFlashCharts>
                                 </configuration>
                             </execution>
                         </executions>
